@@ -4,6 +4,10 @@
 
  Changes between 1.0.x and 1.1.0  [xx XXX xxxx]
 
+  *) New option -brief for s_client and s_server to print out a brief summary
+     of connection parameters.
+     [Steve Henson]
+
   *) Add functions to retrieve and manipulate the raw cipherlist sent by a
      client to OpenSSL.
      [Steve Henson]
